[package]
name = "kurve"
version = "0.1.0"
edition = "2021"
authors = ["Graham Keenan <graham.keenan@outlook.com>"]
license = "MIT"
description = "Adjacency list graph data structure"
readme = "README.md"
documentation = "https://docs.rs/kurve"
homepage = "https://github.com/Tyrannican/kurve"
repository = "https://github.com/Tyrannican/kurve"
keywords = ["graph", "datastructure", "algorithm"]
categories = ["data-structures"]

[dependencies]
